// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `undefined`;

exports[`Food Order app testing button click should hide component 1`] = `[MockFunction]`;

exports[`Food Order app testing render sumbit handler 1`] = `
<MealItemForm
  onClick="{addToCartHandler}"
  onSubmit="{submitHandler}"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <MockedInput
      input={
        Object {
          "defaultValue": "1",
          "id": "amount_undefined",
          "max": "5",
          "min": "1",
          "step": "1",
          "type": "number",
        }
      }
      label="Amount"
    />
    <button>
      + Add
    </button>
  </form>
</MealItemForm>
`;

exports[`Food Order app testing renders a snapshot 1`] = `
<MealItemForm
  onClick="{addToCartHandler}"
  onSubmit="{submitHandler}"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <ForwardRef
      input={
        Object {
          "defaultValue": "1",
          "id": "amount_undefined",
          "max": "5",
          "min": "1",
          "step": "1",
          "type": "number",
        }
      }
      label="Amount"
    >
      <div
        className="input"
      >
        <label
          htmlFor="amount_undefined"
        >
          Amount
        </label>
        <input
          defaultValue="1"
          id="amount_undefined"
          max="5"
          min="1"
          step="1"
          type="number"
        />
      </div>
    </ForwardRef>
    <button>
      + Add
    </button>
  </form>
</MealItemForm>
`;
